# FMAlign2x

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  calculate_score.py  environment.yml  main.cpp  parallel_string.txt
ext/SW/: ssw.cpp
ext/kalign/include/kalign/: kalign_export.h
ext/kalign/lib/: libkalign.so.3  libkalign.so.3.4.0
ext/kalign/lib/cmake/kalign/: kalignConfig.cmake  kalignTargets-release.cmake  kalignTargets.cmake
ext/mafft/linux/usr/libexec/mafft/: addsingle  countlen  dvtditr  filter  mafft-distance  mafft-profile  mccaskillwrap  multi2hat3s  pairlocalalign  restoreu  score  seq2regtable  setcore  setdirection  splittbfast  tbfast
ext/mafft/mafft-7.525-without-extensions/binaries/: addsingle  contrafoldwrap  countlen  disttbfast  dndblast  dndfast7  dndpre  dvtditr  f2cl  filter  getlag  hex2maffttext  mafft-distance  mafft-profile  maffttext2hex  makedirectionlist  mccaskillwrap  multi2hat3s  nodepair  pairash  pairlocalalign  regtable2seq  replaceu  restoreu  score  seq2regtable  setcore  setdirection  sextet5  splittbfast  tbfast  version
ext/mafft/mafft-7.525-without-extensions/core/: Makefile  contrafoldwrap  disttbfast  dndblast  dndfast7  dndpre  f2cl  getlag  hex2maffttext  mafft  mafft-sparsecore.rb  maffttext2hex  makedirectionlist  nodepair  pairash  regtable2seq  replaceu  sextet5  version
ext/mafft/mafft-7.526/core/: Makefile
ext/mafft/mafft-7.526/scripts/: mafft  mafft-homologs.rb
include/: common.h  mem_finder.h  sequence_split_align.h  thread_pool.h  utils.h
src/: libsais.c  libsais16.c  libsais16x64.c  libsais64.c  mem_finder.cpp  sequence_split_align.cpp  thread_condition.cpp  thread_pool.cpp  utils.cpp
tests/: all_commands.txt  generate_test_combinations.sh  run.sh
